--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -36,6 +36,12 @@
   <!-- Right: Email + Socials -->
   <div class="hero__right">
     <a href="mailto:dm@dimit.cc" class="email">dm&#64;dimit.cc</a>
+    <div class="email--icon">
+    <a class="social email--icon" href="mailto:dm@dimit.cc" aria-label="Email">
+      <img class="social__icon social__icon--base" src="assets/icons/mail.svg" alt="" />
+    </a>
+    </div>
+
 
     <div class="icons">
       <a class="social" href="https://github.com/milosdimi" target="_blank" rel="noopener noreferrer"
