--- a/src/app/pages/home/sections/references/references.component.html
+++ b/src/app/pages/home/sections/references/references.component.html
@@ -2,7 +2,8 @@
   <div class="container">
     <h2 class="refs__title mono">What my colleagues say about me</h2>
 
-    <div class="refs__stage">
+    <div class="refs__stage-wrap">
+      <div class="refs__stage">
       <!-- left preview -->
       <article class="card card--side card--left" role="button" tabindex="0" (click)="prev()" (keyup.enter)="prev()"
         (keyup.space)="prev()" aria-label="Previous reference">
@@ -40,6 +41,7 @@
           </span>
         </div>
       </article>
+      </div>
     </div>
 
     <div class="refs__nav">
