--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -26,6 +26,7 @@
   width: 124px;
   height: auto;
   opacity: 0.9;
+  background: linear-gradient(38deg, var(--bg-0) 42%, var(--bg-1) 100%);
 }
 
 .footer__info {
